unpackaged/objects/Continuous_Object_5__c.object
<CustomObject>
	<description>This is the Continuous Integration Object5</description>
	<fields>
		<fullName>CI_Text2__c</fullName>
		<label>CI Text2</label>
		<length>56</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_Text_14__c</fullName>
		<label>CI Text 14</label>
		<length>58</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_Text_4__c</fullName>
		<label>CI Text 4</label>
		<length>58</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_Text__c</fullName>
		<label>CI Text</label>
		<length>55</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CI_text3__c</fullName>
		<label>CI text3</label>
		<length>57</length>
		<type>Text</type>
	</fields>
	<label>Continuous Object 5</label>
	<nameField>
		<displayFormat>{0}</displayFormat>
		<label>Continuous Object 5  Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>CI Objects 5</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>